chore: delete contract wasm before download

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
       - name: download contracts
         run: |
         cd $GITHUB_WORKSPACE/scripts/simapp/contracts
+        rm checksums.sha256 hackatom.wasm ibc_reflect.wasm
         sh download.sh
         cd $GITHUB_WORKSPACE
 
