--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@cosmjs/amino": "0.28.4",
+    "@cosmjs/cosmwasm-stargate": "0.28.4",
     "@cosmjs/encoding": "0.28.4",
     "@cosmjs/math": "0.28.4",
     "@cosmjs/proto-signing": "0.28.4",
@@ -45,6 +46,7 @@
     "cosmjs-types": "0.4.0",
     "lbmjs-types": "^0.46.0-rc7",
     "long": "^4.0.0",
+    "pako": "^2.0.2",
     "protobufjs": "~6.10.2",
     "xstream": "^11.14.0"
   },
@@ -58,6 +60,7 @@
     "@types/karma-jasmine-html-reporter": "^1",
     "@types/long": "^4.0.1",
     "@types/node": "^15.0.1",
+    "@types/pako": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^7.5",
