--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,10 +38,10 @@ jobs:
         run: yarn build
 
       - name: start simd
-        run: CI= /scripts/simapp/start.sh
+        run: CI= scripts/simapp/start.sh
 
       - name: init contract on simd
-        run: /scripts/simapp/init.sh
+        run: scripts/simapp/init.sh
 
       - name: Unit Test Stargate
         run: |
