--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,15 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
 
+      - name: download contracts
+        run: |
+          cd scripts/simapp/contracts
+          bash download.sh
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: "16"
       - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Version information
@@ -32,5 +37,18 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Unit Test
-        run: yarn test
+      - name: start simd
+        run: CI= scripts/simapp/start.sh
+
+      - name: init contract on simd
+        run: scripts/simapp/init.sh
+
+      - name: Unit Test Stargate
+        run: |
+          cd packages/stargate
+          SIMAPP_ENABLED=true yarn run test
+
+      - name: Unit Test Cosmwasm-stargate
+        run: |
+          cd packages/cosmwasm-stargate
+          WASMD_ENABLED=true yarn run test
