chore: change contributor email to noreply

--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -5,7 +5,7 @@
   "contributors": [
     "Simon Warta <webmaster128@users.noreply.github.com>",
     "zemyblue <zemyblue@users.noreply.github.com>",
-    "loin3 <ya6675@naver.com>"
+    "loin3 <55660267+loin3@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
