--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -36,15 +36,15 @@
     "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
   },
   "dependencies": {
-    "@cosmjs/amino": "0.28.4",
-    "@cosmjs/cosmwasm-stargate": "0.28.4",
-    "@cosmjs/encoding": "0.28.4",
-    "@cosmjs/math": "0.28.4",
-    "@cosmjs/proto-signing": "0.28.4",
-    "@cosmjs/stargate": "0.28.4",
-    "@cosmjs/tendermint-rpc": "0.28.4",
-    "@cosmjs/utils": "0.28.4",
-    "cosmjs-types": "0.4.0",
+    "@cosmjs/amino": "^0.29.0",
+    "@cosmjs/cosmwasm-stargate": "^0.29.0",
+    "@cosmjs/encoding": "^0.29.0",
+    "@cosmjs/math": "^0.29.0",
+    "@cosmjs/proto-signing": "^0.29.0",
+    "@cosmjs/stargate": "^0.29.0",
+    "@cosmjs/tendermint-rpc": "^0.29.0",
+    "@cosmjs/utils": "^0.29.0",
+    "cosmjs-types": "^0.5.1",
     "lbmjs-types": "^0.46.0-rc7",
     "long": "^4.0.0",
     "pako": "^2.0.2",
@@ -52,7 +52,7 @@
     "xstream": "^11.14.0"
   },
   "devDependencies": {
-    "@cosmjs/crypto": "0.28.4",
+    "@cosmjs/crypto": "^0.29.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/eslint-plugin-prettier": "^3",
     "@types/jasmine": "^3.8",
