--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "publish-latest": "yarn workspaces foreach --no-private exec yarn npm publish"
   },
   "devDependencies": {
-    "@cosmjs/crypto": "0.28.4",
-    "@cosmjs/encoding": "0.28.4",
-    "@cosmjs/proto-signing": "0.28.4",
-    "@cosmjs/stargate": "0.28.4",
+    "@cosmjs/crypto": "^0.29.0",
+    "@cosmjs/encoding": "^0.29.0",
+    "@cosmjs/proto-signing": "^0.29.0",
+    "@cosmjs/stargate": "^0.29.0",
     "@lbmjs/finschia": "workspace:packages/finschia",
     "eslint": "^7.5",
     "karma-chrome-launcher": "^3.1.0",
