--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.4.0-rc7",
-  "description": "Utilities for LBM SDK 0.45.0-rc7",
+  "version": "0.4.0-rc8",
+  "description": "Utilities for LBM SDK 0.46.0-rc8",
   "contributors": [
-    "Simon Warta <webmaster128@users.noreply.github.com>",
     "zemyblue <zemyblue@users.noreply.github.com>",
     "loin3 <55660267+loin3@users.noreply.github.com>"
   ],
@@ -36,23 +35,23 @@
     "pack-web": "yarn build-or-skip && webpack --mode development --config webpack.web.config.js"
   },
   "dependencies": {
-    "@cosmjs/amino": "0.28.4",
-    "@cosmjs/cosmwasm-stargate": "0.28.4",
-    "@cosmjs/encoding": "0.28.4",
-    "@cosmjs/math": "0.28.4",
-    "@cosmjs/proto-signing": "0.28.4",
-    "@cosmjs/stargate": "0.28.4",
-    "@cosmjs/tendermint-rpc": "0.28.4",
-    "@cosmjs/utils": "0.28.4",
-    "cosmjs-types": "0.4.0",
-    "lbmjs-types": "^0.46.0-rc7",
+    "@cosmjs/amino": "^0.29.0",
+    "@cosmjs/cosmwasm-stargate": "^0.29.0",
+    "@cosmjs/encoding": "^0.29.0",
+    "@cosmjs/math": "^0.29.0",
+    "@cosmjs/proto-signing": "^0.29.0",
+    "@cosmjs/stargate": "^0.29.0",
+    "@cosmjs/tendermint-rpc": "^0.29.0",
+    "@cosmjs/utils": "^0.29.0",
+    "cosmjs-types": "^0.5.1",
+    "lbmjs-types": "^0.46.0-rc8",
     "long": "^4.0.0",
     "pako": "^2.0.2",
     "protobufjs": "~6.10.2",
     "xstream": "^11.14.0"
   },
   "devDependencies": {
-    "@cosmjs/crypto": "0.28.4",
+    "@cosmjs/crypto": "^0.29.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/eslint-plugin-prettier": "^3",
     "@types/jasmine": "^3.8",
