--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -44,7 +44,7 @@
     "@cosmjs/tendermint-rpc": "^0.29.0",
     "@cosmjs/utils": "^0.29.0",
     "cosmjs-types": "^0.5.1",
-    "lbmjs-types": "^0.46.0-rc8",
+    "lbmjs-types": "/Users/user/line/js/lbmjs-folder/lbmjs-types",
     "long": "^4.0.0",
     "pako": "^2.0.2",
     "protobufjs": "~6.10.2",
