chore: setup new genesis and simapp image

--- a/scripts/simapp/template/.simapp/config/app.toml
+++ b/scripts/simapp/template/.simapp/config/app.toml
@@ -12,7 +12,7 @@ minimum-gas-prices = "0stake"
 
 # default: the last 100 states are kept in addition to every 500th state; pruning at 10 block intervals
 # nothing: all historic states will be saved, nothing will be deleted (i.e. archiving node)
-# everything: all saved states will be deleted, storing only the current state; pruning at 10 block intervals
+# everything: all saved states will be deleted, storing only the current and previous state; pruning at 10 block intervals
 # custom: allow pruning options to be manually specified through 'pruning-keep-recent', 'pruning-keep-every', and 'pruning-interval'
 pruning = "nothing"
 
@@ -56,11 +56,14 @@ inter-block-cache = true
 # InterBlockCacheSize is the maximum bytes size of the inter-block cache.
 inter-block-cache-size = 104857600
 
-# IAVLCacheSize is the maximum bytes size of iavl node cache
-iavl-cache-size = 104857600
+# IAVLCacheSize is the maximum units size of iavl node cache (1 unit is 128 bytes)
+# This iavl cache size is just one store cache size, and the store exists for each modules.
+# So be careful that all iavl cache size are difference from this iavl cache size value.
+iavl-cache-size = 524288
 
-# Bech32CacheSize is the maximum bytes size of bech32 cache (Default : 1GB)
-bech32-cache-size = 1073741824
+# IAVLDisableFastNode enables or disables the fast node feature of IAVL. 
+# Default is false.
+iavl-disable-fastnode = false
 
 # IndexEvents defines the set of events in the form {eventType}.{attributeKey},
 # which informs Tendermint what to index. If empty, all events will be indexed.
@@ -138,7 +141,7 @@ rpc-idle-timeout = 60
 rpc-max-body-bytes = 1000000
 
 # EnableUnsafeCORS defines if CORS should be enabled (unsafe - use it at your own risk).
-enabled-unsafe-cors = false
+enabled-unsafe-cors = true
 
 ###############################################################################
 ###                           Rosetta Configuration                         ###
