--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.7.0",
+  "version": "0.7.0-rc0",
   "description": "Utilities for LBM SDK 0.46.0-rc9",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
