--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.7.0-rc0",
-  "description": "Utilities for LBM SDK 0.46.0-rc9",
+  "version": "0.7.0",
+  "description": "Utilities for LBM SDK 0.46.0",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
     "loin3 <55660267+loin3@users.noreply.github.com>"
