--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.7.1",
+  "version": "0.7.2-rc0",
   "description": "Utilities for LBM SDK 0.46.0",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
