--- a/scripts/simapp/template/.simapp/config/config.toml
+++ b/scripts/simapp/template/.simapp/config/config.toml
@@ -47,10 +47,31 @@ db_backend = "goleveldb"
 db_dir = "data"
 
 # Output level for logging, including package level options
-log_level = "info"
+log_level = "main:info,state:info,statesync:info,*:info"
 
 # Output format: 'plain' (colored text) or 'json'
 log_format = "plain"
+
+# LogPath is the file to write logs to(log dir + log filename)
+# ex) /Users/user/.app/logs/app.log
+# If left as an empty string, log file writing is disabled.
+log_path = ""
+
+# LogMaxAge is the maximum number of days to retain old log files based on the
+# timestamp encoded in their filename.  Note that a day is defined as 24
+# hours and may not exactly correspond to calendar days due to daylight
+# savings, leap seconds, etc. The default is not to remove old log files
+# based on age.
+log_max_age = "0"
+
+# LogMaxSize is the maximum size in megabytes of the log file before it gets
+# rotated. It defaults to 100 megabytes.
+log_max_size = "100"
+
+# LogMaxBackups is the maximum number of old log files to retain. The default
+# is to retain all old log files (though MaxAge may still cause them to get
+# deleted.)
+log_max_backups = "0"
 
 ##### additional base config options #####
 
