--- a/.github/workflows/finschia-test.yml
+++ b/.github/workflows/finschia-test.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: download contracts
         run: |
-          cd scripts/simapp/contracts
+          cd scripts/lbm/contracts
           bash download.sh
 
       - name: Set up Node.js
@@ -37,11 +37,11 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: start simd
-        run: CI= scripts/simapp/start.sh
+      - name: start lbm
+        run: CI= scripts/lbm/start.sh
 
-      - name: init contract on simd
-        run: scripts/simapp/init.sh
+      - name: init contract on lbm
+        run: scripts/lbm/init.sh
 
       - name: Unit Test
         run: |
