--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.7.2",
-  "description": "Utilities for LBM SDK 0.46.0",
+  "version": "0.8.0-rc0",
+  "description": "Utilities for LBM SDK 0.47.0-alpha1",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
-    "loin3 <55660267+loin3@users.noreply.github.com>"
+    "loin3 <55660267+loin3@users.noreply.github.com>",
+    "jaeseung-bae <jaeseung-bae@users.noreply.github.com>"
   ],
   "license": "Apache-2.0",
   "main": "build/index.js",
