--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,15 @@ jobs:
       - name: Build
         run: yarn run build
 
+            - name: Check if tag and version match
+      run: |
+        if [ "$(git tag --points-at ${{ github.sha }})" == "v$(jq -r .version package.json)" ]; then
+          echo "Tag and version match. Proceeding with publish."
+        else
+          echo "Tag and version do not match. Skipping publish."
+          exit 1
+        fi
+
       - name: Publish to NPM
         run: |
           cd packages/finschia
