--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@cosmjs/encoding": "^0.30.1",
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.30.1",
-    "@lbmjs/finschia": "workspace:packages/finschia",
+    "@finschia/finschia": "workspace:packages/finschia",
     "eslint": "^7.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
