test: re generate template

--- a/scripts/lbm/template/.lbm/config/app.toml
+++ b/scripts/lbm/template/.lbm/config/app.toml
@@ -61,9 +61,9 @@ inter-block-cache-size = 104857600
 # So be careful that all iavl cache size are difference from this iavl cache size value.
 iavl-cache-size = 524288
 
-# IAVLDisableFastNode enables or disables the fast node feature of IAVL.
-# Default is false.
-iavl-disable-fastnode = false
+# IAVLDisableFastNode enables or disables the fast node feature of IAVL. 
+# Default is true.
+iavl-disable-fastnode = true
 
 # IndexEvents defines the set of events in the form {eventType}.{attributeKey},
 # which informs Tendermint what to index. If empty, all events will be indexed.
