--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lbmjs/finschia",
-  "version": "0.8.0-rc0",
-  "description": "Utilities for LBM SDK 0.47.0-alpha1",
+  "version": "0.8.0-rc1",
+  "description": "Utilities for LBM SDK 0.47.0-rc2",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
     "loin3 <55660267+loin3@users.noreply.github.com>",
