--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "14"
+          registry-url: 'https://registry.npmjs.org'
       - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Install dependencies
