--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -45,8 +45,8 @@
     "@cosmjs/stargate": "^0.30.1",
     "@cosmjs/tendermint-rpc": "^0.30.1",
     "@cosmjs/utils": "^0.30.1",
+    "@finschia/finschia-proto": "^1.0.0",
     "cosmjs-types": "^0.7.1",
-    "lbmjs-types": "^1.0.0-rc5",
     "long": "^4.0.0",
     "pako": "^2.0.2",
     "protobufjs": "~6.10.2",
