--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,6 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
       - "v[0-9]+.[0-9]+.[0-9]+-rc*" # Push events to matching v*, i.e. v1.0-rc1, v20.15.10-rc5
-  release:
-    types: [released]
 
 jobs:
   publish:
@@ -18,7 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "14"
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
       - run: if [ ! -x "$(command -v yarn)" ]; then npm install -g yarn; fi
 
       - name: Install dependencies
