--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@finschia/finschia",
-  "version": "0.8.0",
-  "description": "Utilities for FINSCHIA v1.0.0",
+  "version": "0.9.0-rc1",
+  "description": "Utilities for FINSCHIA v2.0.0",
   "contributors": [
     "zemyblue <zemyblue@users.noreply.github.com>",
     "loin3 <55660267+loin3@users.noreply.github.com>",
@@ -45,7 +45,7 @@
     "@cosmjs/stargate": "^0.30.1",
     "@cosmjs/tendermint-rpc": "^0.30.1",
     "@cosmjs/utils": "^0.30.1",
-    "@finschia/finschia-proto": "^1.0.0",
+    "@finschia/finschia-proto": "^2.0.0-rc1",
     "cosmjs-types": "^0.7.1",
     "long": "^4.0.0",
     "pako": "^2.0.2",
