--- a/scripts/finschia/template/.finschia/config/app.toml
+++ b/scripts/finschia/template/.finschia/config/app.toml
@@ -61,7 +61,7 @@ inter-block-cache-size = 104857600
 # So be careful that all iavl cache size are difference from this iavl cache size value.
 iavl-cache-size = 524288
 
-# IAVLDisableFastNode enables or disables the fast node feature of IAVL. 
+# IAVLDisableFastNode enables or disables the fast node feature of IAVL.
 # Default is true.
 iavl-disable-fastnode = true
 
@@ -182,6 +182,14 @@ enable = true
 
 # Address defines the gRPC server address to bind to.
 address = "0.0.0.0:9090"
+
+# MaxRecvMsgSize defines the max message size in bytes the server can receive.
+# The default value is 10MB.
+max-recv-msg-size = "10485760"
+
+# MaxSendMsgSize defines the max message size in bytes the server can send.
+# The default value is math.MaxInt32.
+max-send-msg-size = "2147483647"
 
 ###############################################################################
 ###                        gRPC Web Configuration                           ###
