change commands to fix yarn1

--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
     "packages/*"
   ],
   "scripts": {
-    "format": "yarn workspaces foreach --topological-dev --parallel --verbose run format",
-    "format-text": "prettier --write \"./*.md\" \"./docs/*.md\" && yarn workspaces foreach --topological-dev --parallel --verbose run format-text",
+    "format": "yarn workspaces run format",
+    "format-text": "prettier --write \"./*.md\" \"./docs/*.md\" && yarn workspaces run format-text",
     "format-shell": "shfmt -w scripts packages",
-    "lint": "yarn workspaces foreach --topological-dev --parallel --verbose run lint",
-    "lint-fix": "yarn workspaces foreach --topological-dev --parallel --verbose run lint-fix",
-    "test": "yarn workspaces foreach --topological-dev --parallel --verbose run test",
-    "test-firefox": "yarn workspaces foreach --topological-dev --parallel --verbose run test-firefox",
-    "test-chrome": "yarn workspaces foreach --topological-dev --parallel --verbose run test-chrome",
-    "coverage": "yarn workspaces foreach --topological-dev --parallel --verbose run coverage",
-    "build": "yarn workspaces foreach --topological-dev --parallel --verbose run build",
-    "docs": "yarn workspaces foreach --topological-dev --parallel --verbose run docs",
-    "pack-web": "yarn workspaces foreach --topological-dev --parallel --verbose run pack-web",
-    "publish-next": "yarn workspaces foreach --no-private exec yarn npm publish --tag next",
-    "publish-latest": "yarn workspaces foreach --no-private exec yarn npm publish"
+    "lint": "yarn workspaces run lint",
+    "lint-fix": "yarn workspaces run lint-fix",
+    "test": "yarn workspaces run test",
+    "test-firefox": "yarn workspaces run test-firefox",
+    "test-chrome": "yarn workspaces run test-chrome",
+    "coverage": "yarn workspaces run coverage",
+    "build": "yarn workspaces run build",
+    "docs": "yarn workspaces run docs",
+    "pack-web": "yarn workspaces run pack-web",
+    "publish-next": "yarn workspaces run publish-next",
+    "publish-latest": "yarn workspaces run publish-latest"
   },
   "devDependencies": {
     "@cosmjs/crypto": "^0.30.1",
     "@cosmjs/encoding": "^0.30.1",
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.30.1",
-    "@finschia/finschia": "workspace:packages/finschia",
+    "@finschia/finschia": "0.9.0-rc1",
     "eslint": "^7.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
