--- a/scripts/with-ibc/docker-compose.yaml
+++ b/scripts/with-ibc/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   finschia-app:
-    image: "finschia/finschianode:1.1.0"
+    image: "finschia/finschianode:2.0.0-rc3"
     ports:
       - "26658:26657"
       - "1317:1317"
@@ -15,7 +15,7 @@ services:
       - host.docker.internal:host-gateway
 
   finschia2-app:
-    image: "finschia/finschianode:1.1.0"
+    image: "finschia/finschianode:2.0.0-rc3"
     ports:
       - "26558:26657"
       - "1318:1317"
@@ -28,7 +28,7 @@ services:
       - host.docker.internal:host-gateway
 
   relayer:
-    image: "ghcr.io/cosmos/relayer:v2.2.0"
+    image: "ghcr.io/cosmos/relayer:v2.4.1"
     depends_on:
       - finschia2-app
       - finschia-app
