--- a/packages/faucet/package.json
+++ b/packages/faucet/package.json
@@ -47,7 +47,7 @@
     "@cosmjs/proto-signing": "^0.31.0",
     "@cosmjs/stargate": "^0.31.0",
     "@cosmjs/utils": "^0.31.0",
-    "@finschia/finschia": "0.9.0",
+    "@finschia/finschia": "^0.9.0",
     "@koa/cors": "^3.3",
     "koa": "^2.13",
     "koa-bodyparser": "^4.3"
