--- a/packages/finschia/package.json
+++ b/packages/finschia/package.json
@@ -47,7 +47,7 @@
     "@cosmjs/stargate": "^0.31.0",
     "@cosmjs/tendermint-rpc": "^0.31.0",
     "@cosmjs/utils": "^0.31.0",
-    "@finschia/finschia-proto": "^2.0.0",
+    "@finschia/finschia-proto": "../package",
     "cosmjs-types": "^0.8.0",
     "long": "^4.0.0",
     "pako": "^2.0.2",
